Flow enhannced to handle token limit exceeding failures